--- a/app/src/main/resources/languages/en.lang
+++ b/app/src/main/resources/languages/en.lang
@@ -58,6 +58,10 @@ colorsHoveredBorderColor=Hovered Border Color
 colorsEdgeMainColor=Edge Main Color
 colorsCanvasBackgroundColor=Canvas Background Color
 colorsCommandLineBackgroundColor=Command Line Background Color
+# Main Screen Block
+mainScreenStartHeight=Main screen start height
+mainScreenStartWidth=Main screen start width
+mainScreenPlacement=Start window placement
 
  ! Error Strings
 
