--- a/app/src/main/resources/languages/ru.lang
+++ b/app/src/main/resources/languages/ru.lang
@@ -106,6 +106,10 @@ workAreaCanvasLimit=Ограничитель холста
 performanceAnimationDuration=Продолжительность анимаций
 performanceCommandFieldScrollDelay=Задержка отправки выходных сообщений командной строки
 
+ ! Analytics
+analyticsTitle=Аналитика
+analyticsLayoutStrategyHint=Стратегия расположения:
+
  ! Descriptions
 # Settings
 ## General Block
