feat(view): added localization for OpenGraphErrors.kt

--- a/app/src/main/resources/languages/en.lang
+++ b/app/src/main/resources/languages/en.lang
@@ -129,6 +129,12 @@ generateRandomGraphGenerateButton=Generate
  ! Dialog Header
 dialogHeaderCloseIconDescription=Close
 
+ ! Open Graph Errors
+openGraphErrorsWarningIconDescription=Warning
+openGraphErrorsNotification=Errors and warnings when loading the graph
+openGraphErrorsErrorIconDescription=Error
+openGraphErrorsOkButton=OK
+
  ! Descriptions
 # Settings
 ## General Block
