--- a/app/src/main/resources/languages/en.lang
+++ b/app/src/main/resources/languages/en.lang
@@ -314,3 +314,8 @@ descriptionCommandFieldScrollDelay=A certain amount of time passes when sending 
 
 errorBasicString=Error: {errorType}.{errorDescription}
 errorNoDescriptionMessage=No description
+
+ ! Any Icon Descriptions
+# Logo
+logoBackground=Logo Background
+logoIcon=Logo Icon
