feat(view): added localization for ColorPickerButton.kt

--- a/app/src/main/resources/languages/en.lang
+++ b/app/src/main/resources/languages/en.lang
@@ -319,3 +319,5 @@ errorNoDescriptionMessage=No description
 # Logo
 logoBackground=Logo Background
 logoIcon=Logo Icon
+# Color Picker
+colorPickerChooseColor=Choose Color
