feat(view): added localization for DropdownSelectButton.kt

--- a/app/src/main/resources/languages/en.lang
+++ b/app/src/main/resources/languages/en.lang
@@ -321,3 +321,5 @@ logoBackground=Logo Background
 logoIcon=Logo Icon
 # Color Picker
 colorPickerChooseColor=Choose Color
+# Dropdown Select
+dropdownSelectArrow=Dropdown Arrow
