feat(view): added localization for SavePathButton.kt

--- a/app/src/main/resources/languages/en.lang
+++ b/app/src/main/resources/languages/en.lang
@@ -323,3 +323,6 @@ logoIcon=Logo Icon
 colorPickerChooseColor=Choose Color
 # Dropdown Select
 dropdownSelectArrow=Dropdown Arrow
+# Save Path
+savePathSelectDirectory=Select directory
+savePathOpenDirectoryDialog=Open Directory Dialog
