--- a/app/src/main/resources/languages/ru.lang
+++ b/app/src/main/resources/languages/ru.lang
@@ -323,3 +323,6 @@ logoIcon=Иконка логотипа
 colorPickerChooseColor=Выберите цвет
 # Dropdown Select
 dropdownSelectArrow=Выпадающая стрелка
+# Save Path
+savePathSelectDirectory=Выберите директорию
+savePathOpenDirectoryDialog=Диалог открытия директории
