feat(view): added localization for SlideMenuhButton.kt

--- a/app/src/main/resources/languages/en.lang
+++ b/app/src/main/resources/languages/en.lang
@@ -326,3 +326,5 @@ dropdownSelectArrow=Dropdown Arrow
 # Save Path
 savePathSelectDirectory=Select directory
 savePathOpenDirectoryDialog=Open Directory Dialog
+# Slide Menu
+slideMenu=Slide menu
