feat(view): added localization for UserDirectoryButton.kt

--- a/app/src/main/resources/languages/ru.lang
+++ b/app/src/main/resources/languages/ru.lang
@@ -328,3 +328,5 @@ savePathSelectDirectory=Выберите директорию
 savePathOpenDirectoryDialog=Диалог открытия директории
 # Slide Menu
 slideMenu=Свернуть меню
+# User Directory
+userDirectoryOpen=Открыть директорию пользователя
