--- a/app/src/main/resources/languages/en.lang
+++ b/app/src/main/resources/languages/en.lang
@@ -328,3 +328,5 @@ savePathSelectDirectory=Select directory
 savePathOpenDirectoryDialog=Open Directory Dialog
 # Slide Menu
 slideMenu=Slide menu
+# User Directory
+userDirectoryOpen=Open user directory
